# FastUp

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml  rust.yml
config/: fastup.yaml
src/: config.rs  elements.rs  fastup.rs  groups.rs  lib.rs  logger.rs  main.rs  state.rs  utils.rs
tests/: config_tests.rs  utils_tests.rs
