[package]
name = "fastup"
version = "0.4.0"
edition = "2024"
authors = ["Sergio Fernández <sergiofdez2000@gmail.com>"]
description = "A lightweight YAML-based local process manager to automate your development environment"
license = "MIT"
repository = "https://github.com/sfdez0/FastUp"
readme = "README.md"
publish = false

[[bin]]
name = "fastup"
path = "src/fastup.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
yaml_serde = "0.10.4"
serde_json = "1.0.149"
sysinfo = "0.38.4"
walkdir = "2.5"
